--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "openai": "^3.2.1",
     "telegraf": "^4.12.2"
   }
 }
