--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "got": "^12.6.0",
     "memory-cache": "^0.2.0",
     "openai": "^3.2.1",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "tinyld": "^1.3.3"
   }
 }
