--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "got": "^12.6.0",
     "memory-cache": "^0.2.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.26.0",
     "openai": "^3.2.1",
     "telegraf": "^4.12.2",
     "tinyld": "^1.3.3"
